--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,7 +10,7 @@ type Props = CollectionEntry<'blog'>['data'];
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="ja">
 	<head>
 		<BaseHead title={title} description={description} />
 		<style>
@@ -66,9 +66,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 						<div class="date">
 							<FormattedDate date={pubDate} />
 							{
-								updatedDate && (
+								updatedDate && pubDate.getTime() != updatedDate.getTime() && (
 									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
+										（<FormattedDate date={updatedDate} /> 更新）
 									</div>
 								)
 							}
