--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,13 +2,11 @@
 import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
+import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
+import { getBlogs } from "../../library/microcms";
+const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt", "eyecatch"] });
 ---
 
 <!doctype html>
@@ -93,11 +91,11 @@ const posts = (await getCollection('blog')).sort(
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
+								<a href={`/blog/${post.id}/`}>
+									<img width={720} height={360} src={post.eyecatch?.url ?? ''} alt={post.title} />
+									<h4 class="title">{post.title}</h4>
 									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
+										<FormattedDate date={new Date(post.publishedAt)} />
 									</p>
 								</a>
 							</li>
