--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 import { getBlogs } from "../library/microcms";
 const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt", "eyecatch"] });
@@ -105,5 +106,6 @@ const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedA
 			</section>
 		</main>
 		<Footer />
+		<SpeedInsights />
 	</body>
 </html>
